# omp-cef

./: CHANGELOG.md  README.md
.github/workflows/: build-and-publish.yml  build-client-reusable.yml  build-server-reusable.yml  create-release-reusable.yml  release.yml
cmake/: cef.cmake
src/client/: CMakeLists.txt
src/client/core/: app.cpp  app.hpp  runtime.cpp  runtime.hpp
src/client/core/browser/: app.hpp  escape_menu.cpp  escape_menu.hpp  focus.cpp  focus.hpp  manager.cpp  manager.hpp  player_list.cpp  player_list.hpp
src/client/core/hooks/: render_hook.cpp
src/client/core/network/: network_manager.cpp  network_manager.hpp
src/client/core/samp/hooks/: scoreboard.cpp  scoreboard.hpp
src/client/core/system/: gta.cpp  gta.hpp  resource_manager.cpp  resource_manager.hpp
src/client/renderer/: main.cpp
src/server/: cef.inc
src/server/common/: CMakeLists.txt  api.cpp  api.hpp  natives.cpp  plugin.cpp  session.cpp  session.hpp
src/server/omp/: CMakeLists.txt  cef_extension_api.cpp  cef_extension_api.hpp
src/shared/: events.hpp
tests/: README.md
tests/omp/: .gitignore  config.json
tests/omp/gamemodes/: cef_demo.pwn
tests/omp/scriptfiles/cef/cef_demo/: blue.html  empty.html  events.html  index.html  red.html  world2d.html
tests/omp/scriptfiles/cef/cef_demo/js/: cef-bridge.js
tests/samp/: server.cfg
tests/samp/gamemodes/: cef_demo.pwn
tests/samp/scriptfiles/cef/cef_demo/: input.html  overlay.html  world3d.html
tests/samp/scriptfiles/cef/cef_demo/css/: app.css
tests/samp/scriptfiles/cef/cef_demo/js/: app.js
tests/shared/: cef_demo.inc
tests/webviews/react/src/: App.tsx
tests/webviews/react/src/components/: escape-menu-example.tsx
